# firstdiscordbot

./: pyproject.toml
src/: main.py
src/extensions/: hello.py
src/utils/: bot.py
